<resources>
    <string name="app_name">TaskManagerApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userpass">نام کاربری و رمز عبور را وارد کنید</string>
    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="you_don_t_have_any_tasks">You Don\'t have any tasks</string>
    <string name="save">Save</string>
    <string name="cacle">Cancle</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>