<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_form"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:hint="Title"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:inputType="text"
            tools:ignore="MissingClass" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_form"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#2B2B2B"
        android:hint="Description"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:inputType="text"
            tools:ignore="MissingClass" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_date"
        android:layout_width="400dp"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:id="@+id/btn_time"
        android:layout_width="400dp"
        android:layout_height="wrap_content">

    </Button>

    <CheckBox
        android:id="@+id/checkbox_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done">

    </CheckBox>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit"/>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>